[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rock-pvp-helper-backend"
version = "0.1.0"
description = "FastAPI backend for Rock PVP Helper"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.1",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
crawler = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
]

dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
"app/api/v1/endpoints/*.py" = ["B008"]
# Alembic 迁移脚本更接近数据库变更记录，保留较长的列定义和索引定义以便审阅。
"alembic/versions/*.py" = ["E501"]
